--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <article id="window">
     <navbar></navbar>
-    <section id="first">
-        <p>Yeehaw</p>
+    <section>
+        <app-front></app-front>
     </section>
     <section id="second">
         <p>Yeehaw</p>
