--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,6 +1,6 @@
 nav {
     padding: 5px;
-    background-color: white;
+    background: rgba(255, 255, 255, 1) !important;
     border-bottom: solid;
     position: sticky;
     top: 0;
