--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -10,11 +10,15 @@
     
     section {
         position: relative;
-        padding: 15px;
         padding-top: 6vh;
         width: 100%;
-        height: 100vh;
+        height: calc(100% - 6vh);
         border-top: solid;
         scroll-snap-align: start;
+
+        &:first-of-type {
+            padding-top: 0px;
+            height: 100%;
+        }
     }
 }
