Added initial styling

--- a/src/app/components/home/front/front.component.html
+++ b/src/app/components/home/front/front.component.html
@@ -1,3 +1,7 @@
 <div class="window" id="front">
-    <h1>Ralanda Wells</h1>
+    <h1 class="retroshadow">Ralanda Wells</h1>
+    <img src="../../../../assets/img/rw1.png">
+    <div id="shapes">
+        <div id="triangle"></div>
+    </div>
 </div>
