--- a/src/app/components/home/front/front.component.scss
+++ b/src/app/components/home/front/front.component.scss
@@ -1,20 +1,47 @@
-@import '~sakura-js/dist/sakura.min.css';
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
+@import "~sakura-js/dist/sakura.min.css";
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap");
 
 .window {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 #front {
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
+	display: flex;
+	align-items: flex-end;
+	justify-content: space-between;
 
-    h1 {
-        font-family: 'Dancing Script', cursive;
-        font-size: 6rem;
-        margin-right: 2vw;
-        margin-bottom: 2vh;
-    }
+	img {
+		width: auto;
+		height: 80vh;
+	}
+
+	h1 {
+		font-family: "Dancing Script", cursive;
+		font-size: 6rem;
+		margin-left: 2rem;
+		margin-bottom: 1rem;
+	}
+}
+
+#shapes {
+	position: absolute;
+	z-index: -5;
+	width: 100vw;
+}
+
+#triangle {
+	border-bottom: 100vh solid rgba(255, 221, 244, 0.6);
+	border-left: 100vw solid transparent;
+}
+
+#shadow {
+	border-bottom: 90vh solid rgba(255, 221, 244, 0.6);
+	border-left: 90vw solid transparent;
+}
+
+.retroshadow {
+	color: #202020;
+	letter-spacing: 0.05em;
+	text-shadow: 4px 4px 0px #ebeaea, 7px 7px 0px rgba(0, 0, 0, 0.2);
 }
