Updated navbar and homepage

--- a/src/app/components/home/front/front.component.html
+++ b/src/app/components/home/front/front.component.html
@@ -1,7 +1,13 @@
-<div class="window" id="front">
-    <h1 class="retroshadow">Ralanda Wells</h1>
-    <img src="../../../../assets/img/rw1.png">
-    <div id="shapes">
-        <div id="triangle"></div>
+<div class="window">
+    <navbar></navbar>
+    <div id="front">
+        <div id="home">
+            <h1 class="retroshadow">"<span id="quote">This is the generation</span>"</h1>
+            <img src="../../../../assets/img/rw1.png">
+        </div>
+        <div id="shapes" class="ground">
+            <div id="triangle"></div>
+        </div>
+        <div id="sakuraLeaves" class="ground"></div>
     </div>
 </div>
