--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,6 @@
 <article id="window">
-    <navbar></navbar>
     <section>
-        <app-front></app-front>
+        <app-front class="panel"></app-front>
     </section>
     <section id="second">
         <p>Yeehaw</p>
