--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,15 @@
-<div>
-    <h1>Ralanda Wells</h1>
-</div>
 <nav>
 	<ul>
-		<li><a href="#first">First</a></li>
-		<li><a href="#second">Second</a></li>
-		<li><a href="#third">Third</a></li>
+		<div>
+			<li><a href="#first"><h2>First</h2></a></li>
+			<li><a href="#second"><h2>Second</h2></a></li>
+		</div>
+		<div>
+			<h1 class="retroshadow">Ralanda Wells</h1>
+		</div>
+		<div>
+			<li><a href="#third"><h2>Third</h2></a></li>
+			<li><a href="#fourth"><h2>Fourth</h2></a></li>
+		</div>
 	</ul>
 </nav>
