--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,14 +5,20 @@ html, body {
 	margin: 0;
 	padding: 0;
 	scroll-behavior: smooth;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body {
-    min-height: 100vh;
     font-family: 'Quicksand', sans-serif;
 }
 
 .sakura {
     position: absolute;
+    z-index: 11;
+}
+
+.retroshadow {
+	color: #202020;
+	letter-spacing: 0.05em;
+	text-shadow: 4px 4px 0px #ebeaea, 7px 7px 0px rgba(0, 0, 0, 0.2);
 }
