--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,24 +1,22 @@
 #window {
-    scroll-snap-type: y mandatory;
-    overflow-y: scroll;
-    height: 100vh;
-    overflow-x: hidden;
-    
-    navbar {
-        scroll-snap-align: end;
-    }
+    // scroll-snap-type: y mandatory;
+    // height: 100vh;
+    // width: 100vw;
     
     section {
-        position: relative;
-        padding-top: 6vh;
-        width: 100%;
-        height: calc(100% - 6vh);
         border-top: solid;
-        scroll-snap-align: start;
+        height: 100vh;
+        width: inherit;
+        // scroll-snap-align: start;
 
         &:first-of-type {
             padding-top: 0px;
-            height: 100%;
         }
+    }
+
+    .panel {
+        height: inherit;
+        width: inherit;
+        display: block;
     }
 }
