--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,9 +1,7 @@
 nav {
     padding: 5px;
-    background: rgba(255, 255, 255, 1) !important;
+    background: white;
     border-bottom: solid;
-    position: sticky;
-    top: 0;
     min-height: 5vh;
     overflow: hidden;
 
@@ -12,10 +10,26 @@ nav {
         flex-direction: row;
         justify-content: space-around;
         list-style-type: none;
+        padding: 0;
+    }
+    
+    div {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex: 1;
+    }
+
+    .retroshadow {
+        font-family: "Dancing Script", cursive;
+        font-size: 3rem;
+        margin: 15px;
     }
 
     a {
         color: black;
         text-decoration: none;
+        font-family: 'Montserrat', sans-serif;
     }
 }
+
