Updated mobile style

--- a/src/app/components/home/front/front.component.html
+++ b/src/app/components/home/front/front.component.html
@@ -2,7 +2,7 @@
     <navbar></navbar>
     <div id="front">
         <div id="home">
-            <h1 class="retroshadow">"<span id="quote">This is the generation</span>"</h1>
+            <h1 class="retroshadow"><app-quote></app-quote></h1>
             <img src="../../../../assets/img/rw1.png">
         </div>
         <div id="shapes" class="ground">
