--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,13 @@
 <nav>
 	<ul>
-		<div>
+		<div class="links">
 			<li><a href="#first"><h2>First</h2></a></li>
 			<li><a href="#second"><h2>Second</h2></a></li>
 		</div>
 		<div>
 			<h1 class="retroshadow">Ralanda Wells</h1>
 		</div>
-		<div>
+		<div class="links">
 			<li><a href="#third"><h2>Third</h2></a></li>
 			<li><a href="#fourth"><h2>Fourth</h2></a></li>
 		</div>
