--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,11 @@ body {
 	letter-spacing: 0.05em;
 	text-shadow: 4px 4px 0px #ebeaea, 7px 7px 0px rgba(0, 0, 0, 0.2);
 }
+
+.teximate-word {
+    padding: 10px;
+}
+
+.teximate-paragraph {
+    margin: 0;
+}
