Fixed positioning for home

--- a/src/app/components/home/front/front.component.html
+++ b/src/app/components/home/front/front.component.html
@@ -2,8 +2,12 @@
     <navbar></navbar>
     <div id="front">
         <div id="home">
-            <h1 class="retroshadow"><app-quote></app-quote></h1>
-            <img src="../../../../assets/img/rw1.png">
+            <div>
+                <h1 class="retroshadow"><app-quote></app-quote></h1>
+            </div>
+            <div>
+                <img src="../../../../assets/img/rw1.png">
+            </div>
         </div>
         <div id="shapes" class="ground">
             <div id="triangle"></div>
