--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,15 +1,15 @@
 <nav>
 	<ul>
 		<div class="links">
-			<li><a href="#first"><h2>First</h2></a></li>
-			<li><a href="#second"><h2>Second</h2></a></li>
+			<li><a href="#home"><h2>Home</h2></a></li>
+			<li><a href="#donate"><h2>Donate</h2></a></li>
 		</div>
 		<div>
 			<h1 class="retroshadow">Ralanda Wells</h1>
 		</div>
 		<div class="links">
-			<li><a href="#third"><h2>Third</h2></a></li>
-			<li><a href="#fourth"><h2>Fourth</h2></a></li>
+			<li><a href="#live"><h2>Live</h2></a></li>
+			<li><a href="#contact"><h2>Contact</h2></a></li>
 		</div>
 	</ul>
 </nav>
