--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,10 +2,10 @@
     <section>
         <app-front class="panel"></app-front>
     </section>
-    <section id="second">
-        <p>Yeehaw</p>
+    <section>
+        <app-bio class="panel"></app-bio>
     </section>
-    <section id="third">
+    <section>
         <p>Yeehaw</p>
     </section>
 </article>
