Added bio panel layout

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,6 +3,7 @@
         <app-front class="panel"></app-front>
     </section>
     <section>
+        <div class="background"></div>
         <app-bio class="panel"></app-bio>
     </section>
     <section>
