--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -7,6 +7,7 @@
         border-top: solid;
         height: 100vh;
         width: inherit;
+        background-color: white;
         // scroll-snap-align: start;
 
         &:first-of-type {
@@ -18,5 +19,20 @@
         height: inherit;
         width: inherit;
         display: block;
+        z-index: 2;
+        position: relative;
     }
+}
+
+.background {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    z-index: 2;
+}
+
+.background:first-of-type {
+    top: 100vh;
 }
