Updated component skeleton, added nav links, added list expand on hover

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,6 +7,17 @@
         <app-bio class="panel"></app-bio>
     </section>
     <section>
-        <p>Yeehaw</p>
+        <app-feed></app-feed>
     </section>
+    <footer>
+        <div>
+            <h4>&#169; Ralanda Wells 2021</h4>
+            <!-- <h4>Created by Brandon Dcruz</h4> -->
+        </div>
+        <div>
+            <fa-icon [icon]="faFacebook" size="2x"></fa-icon>
+            <fa-icon [icon]="faInstagram" size="2x"></fa-icon>
+            <fa-icon [icon]="faYoutube" size="2x"></fa-icon>
+        </div>
+    </footer>
 </article>
