--- a/src/app/components/live/live.component.html
+++ b/src/app/components/live/live.component.html
@@ -1,1 +1,7 @@
-<p>live works!</p>
+<article>
+    <navbar></navbar>
+    <section>
+        <app-livestream></app-livestream>
+        <app-schedule></app-schedule>
+    </section>
+</article>
