--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,15 +1,15 @@
 <nav>
 	<ul>
 		<div class="links">
-			<li><a href="#home"><h2>Home</h2></a></li>
-			<li><a href="#donate"><h2>Donate</h2></a></li>
+			<li><a routerLink=""><h2>Home</h2></a></li>
+			<li><a routerLink="/donate" routerLinkActive="active"><h2>Donate</h2></a></li>
 		</div>
 		<div>
 			<h1 class="retroshadow">Ralanda Wells</h1>
 		</div>
 		<div class="links">
-			<li><a href="#live"><h2>Live</h2></a></li>
-			<li><a href="#contact"><h2>Contact</h2></a></li>
+			<li><a routerLink="/live" routerLinkActive="active"><h2>Live</h2></a></li>
+			<li><a routerLink="/contact" routerLinkActive="active"><h2>Contact</h2></a></li>
 		</div>
 	</ul>
 </nav>
