--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,13 @@
 html, body {
 	margin: 0;
 	padding: 0;
-	scroll-behavior: smooth;
+    scroll-behavior: smooth;
     overflow-x: hidden;
+
+    scrollbar-width: thin;
+    scrollbar-color: rgba(214, 161, 2, 0.4) rgba(255, 221, 244, 0.6);
+    scrollbar-shadow-color: inset 0 0 6px rgba(0,0,0,0.3);
+    scroll-margin-block-start: 0;
 }
 
 body {
@@ -29,4 +34,24 @@ body {
 
 .teximate-paragraph {
     margin: 0;
+}
+
+/* Let's get this party started */
+html::-webkit-scrollbar {
+    width: 15px;
+}
+ 
+/* Track */
+html::-webkit-scrollbar-track {
+    background-color: rgba(255, 221, 244, 0.6);
+    border-radius: 100px;
+}
+ 
+/* Handle */
+html::-webkit-scrollbar-thumb {
+    border-radius: 100px;
+    border: 6px solid rgba(0, 0, 0, 0.18);
+    border-left: 0;
+    border-right: 0;
+    background-color: rgba(214, 161, 2, 0.4);
 }
