--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,23 +1,23 @@
 <article id="window">
-    <section>
+    <section id="frontSection">
         <app-front class="panel"></app-front>
     </section>
     <section>
-        <div class="background"></div>
+        <!-- <div class="background"></div> -->
         <app-bio class="panel"></app-bio>
     </section>
-    <section>
-        <app-feed></app-feed>
+    <section id="feedSection">
+        <app-feed class="panel"></app-feed>
+        <footer>
+            <div>
+                <h4>&#169; Ralanda Wells 2021</h4>
+                <!-- <h4>Created by Brandon Dcruz</h4> -->
+            </div>
+            <div>
+                <fa-icon [icon]="faFacebook" size="2x"></fa-icon>
+                <fa-icon [icon]="faInstagram" size="2x"></fa-icon>
+                <fa-icon [icon]="faYoutube" size="2x"></fa-icon>
+            </div>
+        </footer>
     </section>
-    <footer>
-        <div>
-            <h4>&#169; Ralanda Wells 2021</h4>
-            <!-- <h4>Created by Brandon Dcruz</h4> -->
-        </div>
-        <div>
-            <fa-icon [icon]="faFacebook" size="2x"></fa-icon>
-            <fa-icon [icon]="faInstagram" size="2x"></fa-icon>
-            <fa-icon [icon]="faYoutube" size="2x"></fa-icon>
-        </div>
-    </footer>
 </article>
