--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,15 +5,11 @@ html, body {
 	margin: 0;
 	padding: 0;
     scroll-behavior: smooth;
-    overflow-x: hidden;
-
-    scrollbar-width: thin;
-    scrollbar-color: rgba(214, 161, 2, 0.4) rgba(255, 221, 244, 0.6);
-    scrollbar-shadow-color: inset 0 0 6px rgba(0,0,0,0.3);
-    scroll-margin-block-start: 0;
+    overflow: hidden;
 }
 
 body {
+    min-height: 100vh;
     font-family: 'Quicksand', sans-serif;
 }
 
@@ -37,21 +33,21 @@ body {
 }
 
 /* Let's get this party started */
-html::-webkit-scrollbar {
-    width: 15px;
-}
+// html::-webkit-scrollbar {
+//     width: 15px;
+// }
  
-/* Track */
-html::-webkit-scrollbar-track {
-    background-color: rgba(255, 221, 244, 0.6);
-    border-radius: 100px;
-}
+// /* Track */
+// html::-webkit-scrollbar-track {
+//     background-color: rgba(255, 221, 244, 0.6);
+//     border-radius: 100px;
+// }
  
-/* Handle */
-html::-webkit-scrollbar-thumb {
-    border-radius: 100px;
-    border: 6px solid rgba(0, 0, 0, 0.18);
-    border-left: 0;
-    border-right: 0;
-    background-color: rgba(214, 161, 2, 0.4);
-}
+// /* Handle */
+// html::-webkit-scrollbar-thumb {
+//     border-radius: 100px;
+//     border: 6px solid rgba(0, 0, 0, 0.18);
+//     border-left: 0;
+//     border-right: 0;
+//     background-color: rgba(214, 161, 2, 0.4);
+// }
