Added nav animations and mobile nav
Former-commit-id: 613ced918ab765950b27584f14ba9825a0260ce5

--- a/src/app/components/home/front/front.component.html
+++ b/src/app/components/home/front/front.component.html
@@ -3,10 +3,10 @@
     <div id="front">
         <div id="home">
             <div>
-                <h1 class="retroshadow"><app-quote></app-quote></h1>
+                <h1 class="retroshadow" @fadeIn><app-quote></app-quote></h1>
             </div>
             <div>
-                <img src="../../../../assets/img/rw1.png">
+                <img @fadeIn src="../../../../assets/img/rw1.png">
             </div>
         </div>
         <div id="shapes" class="ground">
