--- a/src/app/components/home/front/front.component.scss
+++ b/src/app/components/home/front/front.component.scss
@@ -26,7 +26,6 @@
 }
 
 #home {
-    // position: absolute;
     z-index: 10;
     display: flex;
     flex-direction: row;
@@ -111,24 +110,24 @@
         }
         
         img {
-            flex: 1.5;
-            height: auto;
+            width: auto;
+            object-fit: cover;
         }
 
         div:first-child {
-            position: absolute;
+            flex: .2;
 
             h1 {
-                font-size: 3em;
+                font-size: 2.5em;
                 align-self: flex-start;
                 text-align: center;
                 padding: 0;
-                margin-left: 0;
-                margin-top: 10vh;
+                margin: 0;
+                margin-top: 20px;
+                margin-bottom: 10px;
                 width: 100%;
                 padding-left: 10px;
                 padding-right: 10px;
-                line-height: 85%;
             }
         }
     }
