Updated baseHref again

--- a/src/app/components/home/front/front.component.html
+++ b/src/app/components/home/front/front.component.html
@@ -6,7 +6,7 @@
                 <h1 class="retroshadow" @fadeIn><app-quote></app-quote></h1>
             </div>
             <div>
-                <img @fadeIn src="../../../../assets/img/rw1.png">
+                <img @fadeIn src="/assets/img/rw1.png">
             </div>
         </div>
         <div id="shapes" class="ground">
