--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -86,6 +86,7 @@ nav {
     top: 13vh;
     bottom: 0px;
     z-index: 20;
+    color: white;
 
     ul {
         display: flex;
@@ -165,6 +166,10 @@ nav {
             
             li {
                 animation: none;
+            }
+
+            a {
+                color: white;
             }
         }
 
