--- a/src/app/components/donate/donate.component.html
+++ b/src/app/components/donate/donate.component.html
@@ -1,6 +1,6 @@
 <article>
     <navbar></navbar>
     <section>
-        <p>Donate works!</p>
+        <p class="soon">Coming soon!</p>
     </section>
 </article>
