--- a/src/app/components/live/live.component.html
+++ b/src/app/components/live/live.component.html
@@ -2,6 +2,6 @@
     <navbar></navbar>
     <section>
         <app-livestream></app-livestream>
-        <app-schedule></app-schedule>
+        <!-- <app-schedule></app-schedule> -->
     </section>
 </article>
