--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,3 +23,11 @@ body {
 	letter-spacing: 0.05em;
 	text-shadow: 4px 4px 0px #ebeaea, 7px 7px 0px rgba(0, 0, 0, 0.2);
 }
+
+.soon {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
