--- a/src/app/components/home/front/front.component.scss
+++ b/src/app/components/home/front/front.component.scss
@@ -115,7 +115,8 @@
         }
 
         div:first-child {
-            flex: .2;
+            flex: .25;
+            display: none;
 
             h1 {
                 font-size: 2.5em;
