--- a/src/app/components/home/front/front.component.scss
+++ b/src/app/components/home/front/front.component.scss
@@ -115,8 +115,10 @@
         }
 
         div:first-child {
-            flex: .25;
-            display: none;
+            flex: .2;
+            justify-content: flex-start;
+            // background: rgba(0,0,0,0)
+            // display: none;
 
             h1 {
                 font-size: 2.5em;
