--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -48,6 +48,10 @@ footer {
     fa-icon {
         margin-left: 10px;
     }
+    
+    a {
+        color: black;
+    }
 }
 
 /* Let's get this party started */
@@ -69,5 +73,3 @@ footer {
     border-right: 0;
     background-color: rgba(214, 161, 2, 0.8);
 }
-
-
