--- a/src/app/components/live/livestream/livestream.component.html
+++ b/src/app/components/live/livestream/livestream.component.html
@@ -1,5 +1,7 @@
 <div id="livestream" class="flex">
     <div id="video" class="flex">
-        <h2>Offline</h2>
+        <a href="https://www.facebook.com/ralanda.wells" target="_blank">
+            <h2>Follow Ralanda on Facebook for more updates</h2>
+        </a>
     </div>
 </div>
