--- a/src/app/components/home/front/front.component.scss
+++ b/src/app/components/home/front/front.component.scss
@@ -27,10 +27,6 @@
 
 #home {
     z-index: 10;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-end;
     width: 100%;
 
     div {
@@ -56,7 +52,7 @@
 	.retroshadow {
         align-self: flex-end;
         font-family: 'Fleur De Leah', cursive;
-        background: -webkit-linear-gradient(20deg, #FF033E, #861322);
+        background: -webkit-linear-gradient(20deg, #b0172b, #FF033E);
         background-clip: text;
         -webkit-background-clip: text;
         -moz-background-clip: text;
@@ -67,7 +63,7 @@
 		margin-left: 2rem;
         padding-right: 1rem;
 		margin-bottom: 3rem;
-        text-shadow: unset;
+        // text-shadow: unset;
 	}
 }
 
@@ -79,7 +75,11 @@
 
 #shapes {
 	z-index: 1;
-    position: fixed;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    max-height: 100vh;
+    overflow: hidden;
 }
 
 #sakuraLeaves {
@@ -87,16 +87,6 @@
     width: 100%;
     top: 10px;
     overflow: hidden;
-}
-
-#triangle {
-	border-bottom: 100vh solid rgba(255, 221, 244, 0.6);
-	border-left: 100vw solid transparent;
-}
-
-#shadow {
-	border-bottom: 90vh solid rgba(255, 221, 244, 0.6);
-	border-left: 90vw solid transparent;
 }
 
 @media screen and (max-width: 900px) {
@@ -132,6 +122,10 @@
                 padding-left: 10px;
                 padding-right: 10px;
             }
+        }
+
+        .retroshadow {
+            text-shadow: unset;
         }
     }
 }
