--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,13 +10,13 @@
         <app-feed class="panel"></app-feed>
         <footer>
             <div>
-                <h4>&#169; Ralanda Wells 2021</h4>
+                <h4>&#169; Ralanda Wells 2022</h4>
                 <!-- <h4>Created by Brandon Dcruz</h4> -->
             </div>
             <div>
-                <fa-icon [icon]="faFacebook" size="2x"></fa-icon>
-                <fa-icon [icon]="faInstagram" size="2x"></fa-icon>
-                <fa-icon [icon]="faYoutube" size="2x"></fa-icon>
+                <a href="https://www.facebook.com/ralanda.wells" target="_blank"><fa-icon [icon]="faFacebook" size="2x"></fa-icon></a>
+                <a href="https://www.instagram.com/ralandawells/" target="_blank"><fa-icon [icon]="faInstagram" size="2x"></fa-icon></a>
+                <a href="https://www.youtube.com/user/raawells" target="_blank"><fa-icon [icon]="faYoutube" size="2x"></fa-icon></a>
             </div>
         </footer>
     </section>
